# backend-AIbook

./: .env.example  .gitignore  Dockerfile  README.md  agent.py  app.py  app_main.py  config.py  huggingface.yml  logging_config.py  main.py  pipeline_metrics.json  pyproject.toml  requirements.txt  retrieve.py  run_hf_spaces.py  setup.py  space.yaml  test_openrouter.py  tmpclaude-17ac-cwd  utils.py  validate_quickstart.py
clients/: cohere_client.py  qdrant_client.py
crawlers/: rate_limiter.py  url_discovery.py  web_crawler.py
extractors/: html_extractor.py
models/: crawl_session.py  document_chunk.py  embedding_record.py
processors/: text_chunker.py
services/: checkpoint_service.py  crawl_service.py  duplicate_service.py  embedding_service.py  error_service.py  metadata_service.py  metrics_service.py  resume_service.py  state_service.py  vector_service.py  vector_storage_service.py
tests/: test_embeddings.py  test_ingestion.py
validators/: embedding_validator.py  input_validator.py
